# robot-environment-awareness

./: .gitignore  README.md  build.gradle  build.gradle.disable  gradle.properties  settings.gradle
Configurations/: SimpleLidarRobot_FootstepPlanningFastSimulation__RegistryConfiguration  defaultREAConfiguration.txt  defaultREAModuleConfiguration.txt  defaultREAUIConfiguration.txt
Data/20161215_215536_PlanarRegionSegmentation/: .gitignore
Data/20161215_221327_PlanarRegionSegmentation/: .gitignore
Data/20170124_154049_PlanarRegionSegmentation/: .gitignore
Data/20170124_160830_PlanarRegionSegmentation/: .gitignore
Data/20170125_103706_PlanarRegionSegmentation/: .gitignore
Data/PlanarRegion/20171023_145512_PlanarRegion/: header.txt  region1071330348  region107407755  region1074402531  region107783123  region1090827239  region1107509771  region1118534534  region1124406040  region1153638931  region1156121371  region1284330559  region1362197595  region142560002  region1473728845  region1473745325  region1509801921  region1541354377  region1554506107  region1594424028  region160020122  region1612915558  region1617555639  region1661877084  region17314716  region1731723303  region1746337512  region1751871610  region1762378241  region1763620107  region179658053  region1830680906  region1842955663  region18818992  region1900872295  region1916766727  (+42 more)
gradle/wrapper/: gradle-wrapper.properties
src/main/messages/ihmc_interfaces/robotenvironmentawareness_msgs/: package.xml
src/main/messages/ihmc_interfaces/robotenvironmentawareness_msgs/msg/: PolygonizerParameters.msg
(+220 files in other folders)
